--- a/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
@@ -23,7 +23,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Empresa órgão público<span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="Empresa" class="form-control" placeholder="eg.: Empresa órgão público"
+                            <input type="text" name="Empresa" class="form-control" placeholder="eg.: Empresa órgão público" maxlength="60"
                                    title="Por favor informe a empresa órgão público" required />
                         </div>
                     </div>
@@ -48,11 +48,10 @@
                                 </span>
                                 <input name="Telefone" id="Telefone" data-plugin-masked-input=""
                                        style="z-index: auto;"
-                                       data-input-mask="(99) 999-9999"
+                                       data-input-mask="(99) 9999-9999"
                                        placeholder="eg.: Telefone da empresa"
                                        Title="Por favor informe o telefone da empresa"
-                                       class="form-control"
-                                       title="Por favor informe o telefone da empresa" required>
+                                       class="form-control"required>
                             </div>
                         </div>
                     </div>
