--- a/Infraero.Relprev.WebUi/Views/SubAssunto/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/SubAssunto/Create.cshtml
@@ -18,7 +18,7 @@
                         <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                     </div>
 
-                    <h2 class="card-title">Cadastrar Sub Assunto da Ocorrência</h2>
+                    <h2 class="card-title">Cadastrar subassunto da ocorrência</h2>
 
                 </header>
                 <div id="vSubAssunto" class="card-body" data-loading-overlay>
@@ -37,7 +37,7 @@
                         <div class="col-sm-9">
                             <textarea type="text" rows="3" name="DscSubAssunto" class="form-control" 
                                       placeholder="Por favor informe a descrição do  sub assunto relacionado as  ocorrências"
-                                      title="eg.: Descrição do  sub assunto relacionado as  ocorrências"
+                                      title="Favor informar a descrição do  sub assunto relacionado as  ocorrências"
                                       required maxlength="50"></textarea>
                         </div>
                     </div>
@@ -92,24 +92,35 @@
             $select.on('change', function () {
                 $(this).trigger('blur');
             });
+            
+            jQuery.validator.addMethod("noSpace", function (value, element) {
+                return value == '' || value.trim().length != 0;
+            }, "Sem espaço por favor e não o deixe vazio");
 
-            $("#form").validate({
-                highlight: function (label) {
-                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
-                },
-                success: function (label) {
-                    $(label).closest('.form-group').removeClass('has-error');
-                    label.remove();
-                },
-                errorPlacement: function (error, element) {
-                    var placement = element.closest('.input-group');
-                    if (!placement.get(0)) {
-                        placement = element;
+            // checkbox, radio and selects
+            $("#form").each(function () {
+                $(this).validate({
+                    rules: {
+                        DscSubAssunto: {
+                            noSpace: true
+                        }
+                    },
+                    highlight: function (element) {
+                        $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
+                    },
+                    success: function (element) {
+                        $(element).closest('.form-group').removeClass('has-error');
+                    },
+                    errorPlacement: function (error, element) {
+                        var placement = element.closest('.input-group');
+                        if (!placement.get(0)) {
+                            placement = element;
+                        }
+                        if (error.text() !== '') {
+                            placement.after(error);
+                        }
                     }
-                    if (error.text() !== '') {
-                        placement.after(error);
-                    }
-                }
+                });
             });
 
             
