--- a/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
@@ -36,7 +36,7 @@
                             <textarea type="text" rows="3" name="DscLocal" class="form-control"
                                       placeholder="eg.: Nome do local da ocorrência cadastrado" 
                                       title="Por favor informe o nome do local da ocorrência cadastrado" 
-                                      required maxlength="255">@Model.Local.DscLocal</textarea>
+                                      required maxlength="100">@Model.Local.DscLocal</textarea>
                             <label class="col-sm-3 control-label text-sm-right pt-2"></label>
                             <label class="col-sm-9 control-label text-sm-left pt-2"><span class="required">* Verificar orientações da empresa para cadastro do Local de Ocorrência</span></label>
                         </div>
@@ -93,7 +93,16 @@
                 $(this).trigger('blur');
             });
 
+            jQuery.validator.addMethod("noSpace", function(value, element) { 
+                return value == '' || value.trim().length != 0;  
+            }, "Sem espaço por favor e não o deixe vazio");
+
             $("#form").validate({
+                rules: {
+                    DscLocal: {
+                        noSpace: true
+                    }
+                },
                 highlight: function (label) {
                     $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
                 },
@@ -110,6 +119,10 @@
                         placement.after(error);
                     }
                 }
+            });
+
+            $(".DscLocal").focusout(function(){
+                $(this).css("background-color", "#FFFFFF");
             });
 
 
