UC 13 - Manter Classificação Relato Prevenção - BUGS

--- a/Infraero.Relprev.WebUi/Views/Parecer/Evaluate.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Parecer/Evaluate.cshtml
@@ -58,7 +58,7 @@
                                        data-plugin-masked-input data-input-mask="99/99/9999"
                                        placeholder="eg.: Data da ocorrência de prevenção"
                                        class="form-control"
-                                       value="@Model.Relato.DatOcorrencia">
+                                       value="@Model.Relato.DatOcorrencia.ToShortDateString()">
                             </div>
                         </div>
 
