--- a/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
@@ -210,7 +210,65 @@
     <script src="~/vendor/bootstrap-timepicker/bootstrap-timepicker.js"></script>
     <script src="~/js/relato.js"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
-    
+    <script>
+    (function ($) {
+
+        'use strict';
+
+        var crud = @ViewBag.CrudMessage;
+
+        if (crud===1) {
+            new PNotify({
+                title: 'Relato',
+                text: 'Cadastro realizado com sucesso!',
+                type: 'success'
+            });
+        }else if (crud === 2) {
+            new PNotify({
+                title: 'Relato',
+                text: 'Dados alterados com sucesso.',
+                type: 'warning'
+            });
+        }else if (crud === 3) {
+            new PNotify({
+                title: 'Relato',
+                text: 'Registro excluído com sucesso.',
+                type: 'error'
+            });
+        }
+
+        var notify = @ViewBag.NotifyMessage;
+        var messagem = '@ViewBag.Notify';
+
+        if (notify===0) {
+            new PNotify({
+                title: 'Relato',
+                text: messagem,
+                type: 'success'
+            });
+        }else if (notify === 1) {
+            new PNotify({
+                title: 'Relato',
+                text: messagem,
+                type: 'warning'
+            });
+        }else if (notify === 2) {
+            new PNotify({
+                title: 'Relato',
+                text: messagem,
+                type: 'error'
+            });
+        }
+
+        //Tooltip
+        if ($.isFunction($.fn['tooltip'])) {
+            $('[data-toggle=tooltip],[rel=tooltip]').tooltip({ container: 'body' });
+        }
+
+    }).apply(this, [jQuery]);
+
+
+    </script>
 }
 
 
