--- a/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
@@ -76,6 +76,80 @@
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
     <script src="~/js/empresa.js"></script>
+        <script>
 
+
+
+        (function ($) {​​
+
+
+
+            'use strict';
+            var crud = @ViewBag.CrudMessage;
+
+
+
+            if (crud===1) {​​
+                new PNotify({​​
+                    title: 'Empresa',
+                    text: 'Cadastro realizado com sucesso!',
+                    type: 'success'
+                }​​);
+            }​​else if (crud === 2) {​​
+                new PNotify({​​
+                    title: 'Empresa',
+                    text: 'Dados alterados com sucesso.',
+                    type: 'warning'
+                }​​);
+            }​​else if (crud === 3) {​​
+                new PNotify({​​
+                    title: 'Empresa',
+                    text: 'Registro excluído com sucesso.',
+                    type: 'error'
+                }​​);
+            }​​
+
+
+
+            var notify = @ViewBag.NotifyMessage;
+            var messagem = '@ViewBag.Notify';
+
+
+
+            if (notify===0) {​​
+                new PNotify({​​
+                    title: 'Empresa',
+                    text: messagem,
+                    type: 'success'
+                }​​);
+            }​​else if (notify === 1) {​​
+                new PNotify({​​
+                    title: 'Empresa',
+                    text: messagem,
+                    type: 'warning'
+                }​​);
+            }​​else if (notify === 2) {​​
+                new PNotify({​​
+                    title: 'Empresa',
+                    text: messagem,
+                    type: 'error'
+                }​​);
+            }​​
+            var $numTel = $("#Telefone");
+            $numTel.keyup(function (event) {​​
+                if ($(this).val().length == 15) {​​
+                    $numTel.mask('(00) 00000-0009');
+                }​​ else {​​
+                    $numTel.mask('(00) 0000-00009');
+                }​​
+            }​​);
+
+
+
+        }​​).apply(this, [jQuery]);
+
+
+
+    </script>
 }
 
