--- a/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
@@ -129,11 +129,10 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-envelope"></i>
                                 </span>
-                                <input type="text" name="EmailRelator" class="form-control" 
-                                       placeholder="eg.: E-mail do relator" 
+                                <input type="text" name="EmailRelator" class="form-control"
+                                       placeholder="eg.: E-mail do relator"
                                        maxlength="100"
-                                       title="Por favor informe um endereço eletrônico válido do usuário"
-                                       />
+                                       title="Por favor informe um endereço eletrônico válido do usuário" />
                             </div>
                         </div>
                         <label class="col-lg-1 control-label text-lg-right pt-2">Telefone (telephone)</label>
@@ -152,10 +151,21 @@
                             <input type="text" name="NomEmpresaRelator" class="form-control" placeholder="eg.: Nome da empresa do relator" maxlength="100" />
                         </div>
                     </div>
+                    @*<div class="form-group row">
+                        <input id="uploadFile" placeholder="Add files from My Computer"/>
+                        <div class="fileUpload btn btn-primary">
+                            <span>Browse</span>
+                            <input id="uploadBtn" type="file" class="upload" multiple="multiple" name="browsefile"/>
+                        </div>
+                        <div id="upload_prev"></div> 
+                    </div>*@
                     <div class="form-group row">
                         <label asp-for="ListArquivo" class="col-sm-3 control-label text-sm-right pt-2">Arquivos</label>
-                        <div class="col-sm-9">
+                        <div class="col-sm-6">
                             <input multiple="" asp-for="ListArquivo" id="custom-file-input">
+                        </div>
+                        <div class="col-sm-3">
+                            <a v-on:click="Remover" class="btn btn-danger pull-left mr-2" style="color: #ffffff">Limpar &nbsp;&nbsp;<i class="fa fa-trash"></i></a>
                         </div>
                     </div>
 
@@ -166,7 +176,6 @@
                                 <thead>
                                     <tr>
                                         <th>Arquivo</th>
-                                        <th>Ação</th>
                                     </tr>
                                 </thead>
                             </table>
@@ -198,6 +207,9 @@
     <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
     <link rel="stylesheet" href="~/vendor/bootstrap-timepicker/css/bootstrap-timepicker.css" />
+    
+
+
 }
 @section Scripts {
     <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
@@ -210,62 +222,66 @@
     <script src="~/vendor/bootstrap-timepicker/bootstrap-timepicker.js"></script>
     <script src="~/js/relato.js"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
+
     <script>
-    (function ($) {
 
-        'use strict';
+        (function ($) {
 
-        var crud = @ViewBag.CrudMessage;
 
-        if (crud===1) {
-            new PNotify({
-                title: 'Relato',
-                text: 'Cadastro realizado com sucesso!',
-                type: 'success'
-            });
-        }else if (crud === 2) {
-            new PNotify({
-                title: 'Relato',
-                text: 'Dados alterados com sucesso.',
-                type: 'warning'
-            });
-        }else if (crud === 3) {
-            new PNotify({
-                title: 'Relato',
-                text: 'Registro excluído com sucesso.',
-                type: 'error'
-            });
-        }
 
-        var notify = @ViewBag.NotifyMessage;
-        var messagem = '@ViewBag.Notify';
+            'use strict';
 
-        if (notify===0) {
-            new PNotify({
-                title: 'Relato',
-                text: messagem,
-                type: 'success'
-            });
-        }else if (notify === 1) {
-            new PNotify({
-                title: 'Relato',
-                text: messagem,
-                type: 'warning'
-            });
-        }else if (notify === 2) {
-            new PNotify({
-                title: 'Relato',
-                text: messagem,
-                type: 'error'
-            });
-        }
+            var crud = @ViewBag.CrudMessage;
 
-        //Tooltip
-        if ($.isFunction($.fn['tooltip'])) {
-            $('[data-toggle=tooltip],[rel=tooltip]').tooltip({ container: 'body' });
-        }
+            if (crud===1) {
+                new PNotify({
+                    title: 'Relato',
+                    text: 'Cadastro realizado com sucesso!',
+                    type: 'success'
+                });
+            }else if (crud === 2) {
+                new PNotify({
+                    title: 'Relato',
+                    text: 'Dados alterados com sucesso.',
+                    type: 'warning'
+                });
+            }else if (crud === 3) {
+                new PNotify({
+                    title: 'Relato',
+                    text: 'Registro excluído com sucesso.',
+                    type: 'error'
+                });
+            }
 
-    }).apply(this, [jQuery]);
+            var notify = @ViewBag.NotifyMessage;
+            var messagem = '@ViewBag.Notify';
+
+            if (notify===0) {
+                new PNotify({
+                    title: 'Relato',
+                    text: messagem,
+                    type: 'success'
+                });
+            }else if (notify === 1) {
+                new PNotify({
+                    title: 'Relato',
+                    text: messagem,
+                    type: 'warning'
+                });
+            }else if (notify === 2) {
+                new PNotify({
+                    title: 'Relato',
+                    text: messagem,
+                    type: 'error'
+                });
+            }
+
+            //Tooltip
+            if ($.isFunction($.fn['tooltip'])) {
+                $('[data-toggle=tooltip],[rel=tooltip]').tooltip({ container: 'body' });
+            }
+
+        }).apply(this, [jQuery]);
 
 
     </script>
